# deknote

./: .gitignore  LICENSE
deknote For Linux/: com.cakedek.deknote.json  meson.build
deknote For Linux/data/: com.cakedek.deknote.appdata.xml.in  com.cakedek.deknote.desktop.in  com.cakedek.deknote.gschema.xml  meson.build
deknote For Linux/data/icons/: meson.build
deknote For Linux/po/: POTFILES  meson.build
deknote For Linux/src/: application.vala  deknote.gresource.xml  main.vala  meson.build  window.ui  window.vala
deknote For Windows/: deknote.sln
deknote For Windows/deknote/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Window1.xaml  Window1.xaml.cs  about.xaml  about.xaml.cs  cake_about.xaml  cake_about.xaml.cs  cake_welcome.xaml  cake_welcome.xaml.cs  cannada.json  deknote.csproj  preference.xaml  preference.xaml.cs  welcome.xaml  welcome.xaml.cs
deknote For Windows/deknote/cake_class/: cake_fileclass.cs  cake_openfile.cs
deknote For Windows/deknote/cake_messageBox/: cake_warning_messagebox.xaml  cake_warning_messagebox.xaml.cs
